# genba_oop

./: .gitignore  Makefile  pyproject.toml
.github/workflows/: main.yml
app/: example.py
tests/: test_example.py
