[tool.poetry]
name = "genba_de_oop"
version = "0.1.0"
description = ""
authors = ["Mizuki Sato <mizki.sato.0025@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
mypy = "^0.740.0"
flake8 = "^3.7"
pytest = "^5.2"
pytest-cov = "^2.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
